--- a/sass/styles/_steps.sass
+++ b/sass/styles/_steps.sass
@@ -10,6 +10,8 @@
 .steps__quest--wrapper
 	display: flex
 	padding-left: 55px
+	+tablet_max
+		padding-left: 0
 
 .steps__circle
 	width: 70px
