--- a/sass/styles/_thanks.sass
+++ b/sass/styles/_thanks.sass
@@ -11,6 +11,7 @@
 	+tablet_max
 		width: 100%
 		margin-bottom: 10px
+		margin-left: 0
 
 .thanks__text-colored .bg--light-yellow
 	font-size: 20px
